--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -78,7 +78,7 @@ const articleDate = pubDate.toISOString()
 		aria-labelledby={title + '-title'}
 	>
 		<div itemscope itemtype='https://schema.org/ImageObject'>
-			<img src={heroImage?.src} alt='image' itemprop='contentUrl' />
+			<img src={heroImage?.src} alt='image' itemprop='url' />
 		</div>
 		<div itemprop='articleBody'>
 			<header class='mb-3 flex flex-col justify-center items-center gap-6'>
