--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -148,7 +148,7 @@ const articleDate = pubDate.toISOString()
 						heroImage && (
 							<div itemscope itemtype='https://schema.org/ImageObject'>
 								<Picture
-									itemprop='contentUrl'
+									itemprop='url'
 									src={heroImage}
 									class='rounded-md w-full max-h-[250px] border-4 md:border-t-4  md:max-h-[200px] my-8 object-cover border-white-900'
 									alt={`img of ${title}`}
