--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -78,8 +78,10 @@ const articleDate = pubDate.toISOString()
 		aria-labelledby={title + '-title'}
 	>
 		<div itemscope itemtype='https://schema.org/ImageObject'>
-			<img src={heroImage?.src} alt='image' itemprop='image' />
+			<img src={heroImage?.src} alt='image' itemprop='url' />
 		</div>
+		<img src={heroImage?.src} alt='image' itemprop='image' />
+
 		<div itemprop='articleBody'>
 			<header class='mb-3 flex flex-col justify-center items-center gap-6'>
 				<a class='u-url u-uid' href={pageUrl} style='display:none;'></a>
