--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -98,10 +98,7 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 		<!-- post -->
 		<article class='h-card card max-w-full w-full'>
 			<span class='main-content-shadow'></span>
-			<div
-				class='e-content prose prose-lg md:prose-xl dark:prose-invert mb-12 min-w-full'
-				itemprop='articleBody'
-			>
+			<div class='e-content prose prose-lg md:prose-xl dark:prose-invert mb-12 min-w-full'>
 				<LinkUnderline class='u-url' href=`https://jswhisperer.uk/post/${post.slug}`>
 					permalink
 				</LinkUnderline>
