--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -104,11 +104,9 @@ const articleDate = pubDate.toISOString()
 							>
 								<div class='author-name'>
 									by
-									<a itemprop='name' href='https://jswhisperer.uk/author/greg' class='name p-name'
-										>Gregory Benner</a
-									>
+
 									<a itemprop='url' href='https://jswhisperer.uk/author/greg' class='url u-url'
-										>jswhisperer.uk/author/greg</a
+										><span itemprop='name' class='name p-name'>Gregory Benner</span></a
 									>
 								</div>
 								{
