--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -76,9 +76,9 @@ const articleDate = pubDate.toISOString()
 		itemtype='http://schema.org/BlogPosting'
 		aria-labelledby={title + '-title'}
 	>
-		<div itemscope itemtype='https://schema.org/ImageObject'>
+		<!-- <div itemscope itemtype='https://schema.org/ImageObject'>
 			<img src={heroImage?.src} alt='image' itemprop='url' />
-		</div>
+		</div> -->
 		<img src={heroImage?.src} alt='image' itemprop='image' />
 
 		<div itemprop='articleBody'>
