--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -74,6 +74,7 @@ const showDate = (webmention: string) =>
 											alt={webmention.author.name}
 											height='50'
 											width='50'
+											itemprop='image'
 											src={webmention.author.photo}
 											fit='cover'
 											attributes={{
