--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -74,6 +74,10 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 }
 ---
 
+<script src='https://unpkg.com/modern-screenshot'></script>
+<script
+	type='text/partytown'
+	src='https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.js'></script>
 <!--
 <script src='https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js'></script> -->
 <BlogPost
@@ -132,7 +136,6 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 			</div>
 		</article>
 	</div>
-	<canvas width='500' height='200'></canvas>
 </BlogPost>
 
 <script>
@@ -167,33 +170,61 @@ function getWebmentionsForUrl(webmentions: any[], url: any) {
 		//console.log(loggedIn)
 	}
 </script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.js'></script>
+<!-- <script is:inline type='text/javascript'>
+  setTimeout(() => {
+  window.modernScreenshot.domToPng(document.querySelector('.bluesky-post-container')).then(dataUrl => {
+    const link = document.createElement('a')
+    link.download = 'screenshot.png'
+    link.href = dataUrl
+    link.click()
+  })}, 1000)
+</script> -->
+
+<!--
 <script
 	type='text/partytown'
-	src='https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js'></script>
-<script type='text/partytown'>
-	window.partytown = {
-		debug: true
-	}
+	src='https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/lib/core/cache-storage.js'
+></script> -->
+<script>
+	// const html2canvas = require('html2canvas')
+	// //
+	// const { Cache } = require('html2canvas/dist/lib/core/cache-storage.js')
+	// const { Context } = require('html2canvas/dist/lib/core/context.js')
+	//	import html2canvas from 'html2canvas'
+	import { Cache } from 'html2canvas/dist/lib/core/cache-storage.js'
+	import { Context } from 'html2canvas/dist/lib/core/context.js'
+
 	const blueSkyEl = document.querySelector('.bluesky-post-container')
 	var canvasEl = document.querySelector('canvas')
-
-	console.log('xxx', { blueSkyEl })
+	let twoCan
+	const cache = new Cache(new Context({ allowTaint: true, scale: 2, removeContainer: false }), {
+		logger: console,
+		removeContainer: false,
+		allowTaint: true
+	})
 	if (blueSkyEl) {
-		setTimeout(() => {
-			window
-				.html2canvas(document.body.querySelector('.bluesky-post-container'), {
-					allowTaint: true,
-					canvas: canvasEl
-					// onrendered: function (canvas) {
-					// 	console.log('canvas', { canvas })
-					// }
-				})
+		setTimeout(async () => {
+			// console.log({ html2canvas: html2canvas })
+			twoCan = await html2canvas(blueSkyEl, {
+				scale: 2,
+				allowTaint: true,
+				imageTimeout: 10000,
+				removeContainer: false,
+				cache,
+				onclone: function (clonedDoc) {
+					console.log('clonedDoc', { clonedDoc })
+				}
+				// canvas: canvasEl
+			})
 				.then((canvas) => {
-					console.log('canvas', { canvas })
 					blueSkyEl.after(canvas)
-					blueSkyEl.remove()
+					console.log({ canvas })
+
+					//blueSkyEl.remove()
 				})
 				.catch((error) => console.error({ error }))
+			console.log({ cache })
 		}, 1000)
 	}
 </script>
