--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -41,6 +41,7 @@ const atomFeed = '/atom.xml'
 <meta name='generator' content={Astro.generator} />
 <link rel='pingback' href='https://webmention.io/jswhisperer.uk/xmlrpc' />
 <link rel='webmention' href='https://webmention.io/jswhisperer.uk/webmention' />
+<link rel='preconnect' href='https://api-gateway.umami.dev' />
 
 {
 	[
