--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -27,7 +27,7 @@ type Props = {
 
 const { data, readTime, headings, id, slug, blskyid, body } = Astro.props
 const { title, description, pubDate, heroImage, tags, author, category } = data
-const heroImageSrc = heroImage ?? '/public/open-graph.png'
+const heroImageSrc = heroImage.src ?? '/public/open-graph.png'
 const authors = await getCollection('author')
 
 const currentAuthor = authors.find((a) => a.slug === author?.id)
@@ -79,11 +79,10 @@ const articleDate = pubDate.toISOString()
 	>
 		<!-- <div itemscope itemtype='https://schema.org/ImageObject'>
 			<img src={heroImage?.src} alt='image' itemprop='url' />
-		</div> -->
+		</div> -->,
 		<Picture
-			src={heroImageSrc}
+			src={heroImage}
 			alt='image'
-			style='opacity: 1;'
 			decoding='async'
 			formats={['avif', 'webp']}
 			itemprop='image'
