--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -27,7 +27,7 @@ const {
 				heroImage && (
 					<>
 						<div />
-						<Img src={heroImage.src || '/public/open-graph.png'} />
+						<Img src={heroImage.src || '/public/open-graph.png'} alt='image' />
 					</>
 					// format='webp'
 					// alt={`img of ${title}`}
