--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -2,12 +2,12 @@
 
 ---
 
-<div id='header'>
+<div id='header' role='banner' itemscope itemtype='http://schema.org/WPHeader'>
 	<span class='shadow-down'></span>
 	<div id='content'>
 		<div class='container'>
 			<div id='logo'>
-				<h1 class='title'>
+				<h1 class='title' itemprop='name'>
 					<a href='/'>
 						<!-- G<span class="small-mobile-hide">REG</span> -->
 						JavaScript
