--- a/src/components/Share.astro
+++ b/src/components/Share.astro
@@ -1,23 +1,25 @@
 ---
 import { siteConfig } from '@/data/site.config'
-import TwitterColorIcon from './icons/TwitterColorIcon.astro'
 import LinkedinColorIcon from './icons/LinkedinColorIcon.astro'
+import TwitterColorIcon from './icons/TwitterColorIcon.astro'
 const message = siteConfig.shareMessage
 
 const URL = Astro.url.href
 ---
 
 <div class='flex flex-col gap-2'>
-	<span class='mb-1 font-bold text-2xl'>Share</span>
+	<span class='mb-1 font-bold text-2xl' itemprop='name'>Share</span>
 	<ul class='flex gap-3 text-black dark:text-white'>
 		<li>
 			<a
+				itemprop='url'
 				href={`https://twitter.com/intent/tweet?text=${message + ' ' + URL}`}
 				aria-label='Share on Twitter'><TwitterColorIcon /></a
 			>
 		</li>
 		<li>
 			<a
+				itemprop='url'
 				href={`https://www.linkedin.com/shareArticle?mini=true&url=${URL}`}
 				aria-label='Share on LinkedIn'
 			>
