--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,7 +24,7 @@ const structuredData = {
 }
 ---
 
-<html itemscope itemtype='http://www.schema.org/CollectionPage' lang='en' class='scroll-smooth'>
+<html lang='en' class='scroll-smooth'>
 	<Head>
 		<head>
 			<meta name='viewport' content='width=device-width, initial-scale=1' />
@@ -34,7 +34,7 @@ const structuredData = {
 		</head>
 	</Head>
 
-	<body id='body'>
+	<body id='body' itemscope itemtype='http://schema.org/WebPage'>
 		<!-- <Header /> -->
 		<NewHeader />
 		<main
