--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -42,12 +42,7 @@ const showDate = (webmention: string) =>
 	webmentions.length ? (
 		<>
 			<span itemprop='commentCount'>{webmentions.length}</span>
-			<section
-				aria-label='Webmentions'
-				itemprop='comment'
-				itemscope
-				itemtype='http://schema.org/UserComments'
-			>
+			<section aria-label='Webmentions' itemscope itemtype='http://schema.org/UserComments'>
 				<h2 id='webmentions'>Webmentions</h2>
 				<ul>
 					{webmentions.map((webmention: WebmentionProps) => (
