--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,13 +24,72 @@ const structuredData = {
 }
 ---
 
-<html lang='en' class='scroll-smooth'>
+<html amp lang='en' class='scroll-smooth'>
+	<meta charset='utf-8' />
+	<script async is:raw src='https://cdn.ampproject.org/v0.js'></script>
 	<Head>
 		<head>
 			<meta name='viewport' content='width=device-width, initial-scale=1' />
 			<BaseHead title={title} description={description} ogImage={image} articleDate={articleDate} />
 			<ProviderTheme />
 			<ProviderAnimations />
+			<style amp-boilerplate>
+				body {
+					-webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+					-moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+					-ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+					animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+				}
+				@-webkit-keyframes -amp-start {
+					from {
+						visibility: hidden;
+					}
+					to {
+						visibility: visible;
+					}
+				}
+				@-moz-keyframes -amp-start {
+					from {
+						visibility: hidden;
+					}
+					to {
+						visibility: visible;
+					}
+				}
+				@-ms-keyframes -amp-start {
+					from {
+						visibility: hidden;
+					}
+					to {
+						visibility: visible;
+					}
+				}
+				@-o-keyframes -amp-start {
+					from {
+						visibility: hidden;
+					}
+					to {
+						visibility: visible;
+					}
+				}
+				@keyframes -amp-start {
+					from {
+						visibility: hidden;
+					}
+					to {
+						visibility: visible;
+					}
+				}
+			</style><noscript
+				><style amp-boilerplate>
+					body {
+						-webkit-animation: none;
+						-moz-animation: none;
+						-ms-animation: none;
+						animation: none;
+					}
+				</style></noscript
+			>
 		</head>
 	</Head>
 
