--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -26,7 +26,7 @@ const structuredData = {
 
 <html amp lang='en' class='scroll-smooth'>
 	<meta charset='utf-8' />
-	<script async is:raw src='https://cdn.ampproject.org/v0.js'></script>
+	<script async is:inline src='https://cdn.ampproject.org/v0.js'></script>
 	<Head>
 		<head>
 			<meta name='viewport' content='width=device-width, initial-scale=1' />
@@ -80,8 +80,8 @@ const structuredData = {
 						visibility: visible;
 					}
 				}
-			</style><noscript
-				><style amp-boilerplate>
+			</style><noscript>
+				<style amp-boilerplate>
 					body {
 						-webkit-animation: none;
 						-moz-animation: none;
