--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -74,10 +74,10 @@ const showDate = (webmention: string) =>
 											alt={webmention.author.name}
 											height='50'
 											width='50'
-											itemprop='image'
 											src={webmention.author.photo}
 											fit='cover'
 											attributes={{
+												itemprop: 'image',
 												picture: {
 													style: 'margin: 0 20px 0 0;'
 												},
