--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -5,7 +5,7 @@
 	html.dark .shiki,
 	html.dark .shiki span {
 		color: var(--shiki-dark) !important;
-		background-color: theme(colors.gray.900) !important;
+		background-color: #1a202c !important; /* equivalent to gray.900 in Tailwind CSS */
 	}
 }
 
